# crm-api/app/dealer/dealers_config_handler.py
@@ -75,4 +75,47 @@ def lambda_handler(event: Any, context: Any) -> Any:
             "statusCode": 500,
             "body": dumps({"error": "An error occurred while processing the request."}),
         }
-    
+
+
+if __name__ == "__main__":
+    response = lambda_handler(event={
+            "httpMethod": "GET",
+            "queryStringParameters":{
+                "crm_dealer_id": 'test_crm_dealer_id_1'
+            }
+        }, context="")
+    print(dumps(loads(response['body']), indent=4))
+
+    # response = lambda_handler(
+    #     event={
+    #         "httpMethod": "POST",
+    #         "body": {
+    #             "crm_dealer_id": "test_crm_dealer_id_1",
+    #             "product_dealer_id": "test_crm_dealer_id",
+    #             "dealer_name": "TESTDEALERNAME",
+    #             "integration_partner_name": "TESTCRM",
+    #             "sfdc_account_id": "TEST",
+    #             # "dealer_location_name": "Example Location",
+    #             "timezone": "US/Eastern",
+    #         },
+    #     },
+    #     context="",
+    # )
+    # print(response)
+
+    # response = lambda_handler(event={
+    #         "httpMethod": "PUT",
+    #         "body": {
+    #             "is_active_salesai": True,
+    #             # "metadata": {
+    #             #     "userId": "TESTID",
+    #             #     "adf_email_recipients": ["TEST@impel.test"]
+    #             # },
+    #             "product_dealer_id": "test_crm_dealer_id",
+    #             "integration_partner_name": "TESTCRM"
+    #         },
+    #         # "queryStringParameters":{
+    #         #     "product_dealer_id": 'activix-test-dealer'
+    #         # }
+    #     }, context="")
+    # print(dumps(response, indent=4))
